--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -37,6 +37,7 @@
     </plugins>
   </build>
   <modules>
+    <module>byteman_support</module>
     <module>WSAS</module>
     <module>WSAS/xts-test-servlet</module>
     <module>WS-C</module>
