--- a/pom.xml
+++ b/pom.xml
@@ -943,6 +943,11 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
+	<groupId>org.jboss.narayana.xts</groupId>
+	<artifactId>byteman_support</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.narayana.rts</groupId>
         <artifactId>restat-web</artifactId>
         <version>${project.version}</version>
@@ -973,27 +978,27 @@
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman</artifactId>
-        <version>2.0.1</version>
+        <version>2.1.2</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-install</artifactId>
-        <version>2.0.1</version>
+        <version>2.1.2</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-submit</artifactId>
-        <version>2.0.1</version>
+        <version>2.1.2</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-bmunit</artifactId>
-        <version>2.0.1</version>
+        <version>2.1.2</version>
       </dependency>
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-dtest</artifactId>
-        <version>2.0.1</version>
+        <version>2.1.2</version>
       </dependency>
   </dependencies>
   </dependencyManagement>
