--- a/txframework/src/test/resources/web.xml
+++ b/txframework/src/test/resources/web.xml
@@ -1,6 +1,6 @@
 <!--
   ~ JBoss, Home of Professional Open Source.
-  ~ Copyright 2012, Red Hat, Inc., and individual contributors
+  ~ Copyright 2013, Red Hat, Inc., and individual contributors
   ~ as indicated by the @author tags. See the copyright.txt file in the
   ~ distribution for a full listing of individual contributors.
   ~
@@ -25,12 +25,12 @@
          version="2.4">
 
     <servlet>
-        <servlet-name>ATService</servlet-name>
+        <servlet-name>org.jboss.narayana.txframework.functional.services.ATService</servlet-name>
         <servlet-class>org.jboss.narayana.txframework.functional.services.ATService</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>ATService</servlet-name>
+        <servlet-name>org.jboss.narayana.txframework.functional.services.ATService</servlet-name>
         <url-pattern>/ATService</url-pattern>
     </servlet-mapping>
 
