JBTM-1311 Unify all XTS/localjunit tests

--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -156,6 +156,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <forkMode>once</forkMode>
+                            <workingDirectory>.</workingDirectory>
                             <systemPropertyVariables combine.children="append">
                                 <!--
                                   Used in arquillian.xml
