--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -29,6 +29,16 @@
     </properties>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -94,26 +104,6 @@
         </dependency>
     </dependencies>
     <profiles>
-        <!-- The default profile skips all tests, though you can tune it
-            to run just unit tests based on a custom pattern -->
-        <!-- Seperate profiles are provided for running all tests, including
-            Arquillian tests that execute in the specified container -->
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>arq-remote</id>
             <activation>
@@ -132,6 +122,7 @@
                                 <server.jvm.args>${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
+                            <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -165,6 +156,7 @@
                                 </server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
+                            <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -199,6 +191,7 @@
                                 </server.jvm.args>
                                 <node.address>[::1]</node.address>
                             </systemPropertyVariables>
+                            <skip>false</skip>
                         </configuration>
                     </plugin>
                 </plugins>
