--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -41,4 +41,24 @@
     <module>jdbc</module>
     <module>narayana-jta</module>
   </modules>
+  <profiles>
+      <profile>
+          <id>release</id>
+          <build>
+              <plugins>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-install-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>default-install</id>
+                      <phase>install</phase>
+                    </execution>
+                  </executions>
+                  <inherited>false</inherited>
+                </plugin>
+              </plugins>
+          </build>
+      </profile>
+  </profiles>
 </project>
